--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ div.composer_keyboard {
 	margin-left: 15px;
 	margin-right: 15px;
 	overflow: hidden;
+	margin-top: 9px;
 
 }
 
@@ -134,22 +135,67 @@ ul.piano li span {
 
 }
 
-#postcomposer .controls .right-controls .slider strong {
+#postcomposer .recording_offset {
 
-	font-size: 11px;
-	position: relative;
-	top: -3px;
+	float: right;
+	width: 158px;
 
 }
 
-#postcomposer .controls .right-controls .slider #slider-release-amount, #postcomposer .controls .right-controls .slider #slider-attack-amount, #postcomposer .controls .right-controls .slider #slider-volume-amount {
+#postcomposer .recording_playback_time {
+
+	float: left;
+	font-size: 38px;
+	margin-left: 10px;
+
+}
+
+#postcomposer .controls .right-controls .slider strong, #postcomposer .recordings_slider_offset strong {
+
+	font-size: 10px;
+	position: relative;
+	top: -4px;
+
+}
+
+#postcomposer .recordings_slider_offset strong {
+
+	top: 0px;
+	left: 8px;
+
+}
+
+#postcomposer .recordings_slider_offset {
+
+	float: right;
+	margin-top: 45px;
+
+}
+
+#postcomposer .recording_type {
+
+	float: right;
+	margin-top: 36px;
+	margin-left: 12px;
+
+}
+
+#postcomposer .controls .right-controls .slider #slider-release-amount, #postcomposer .controls .right-controls .slider #slider-attack-amount, #postcomposer .controls .right-controls .slider #slider-volume-amount, #postcomposer .recordings_slider_offset .slider_offset_amount {
 
 	position: relative;
-	top: -19px;
+	top: -20px;
 	left: 150px;
 	font-size: 10px;
 
 }
+
+#postcomposer .recordings_slider_offset .slider_offset_amount {
+
+	top: -1px;
+	left: 88px;
+
+}
+
 
 #postcomposer .keys_counter {
 
@@ -168,15 +214,22 @@ ul.piano li span {
 
 }
 
+#postcomposer .recordings button {
+
+	margin-right: 6px;
+
+}
+
 #postcomposer .recordings .recording_one, #postcomposer .recordings .recording_two {
 
-	width: 49%;
+	width: 47.5%;
 	border: 2px solid #E6E6E6;
 	border-radius: 5px;
-	height: 120px;
+	height: 100px;
 	font-size: 10px;
 	background-position: center center;
 	background-repeat: no-repeat;
+	padding: 10px;
 
 }
 
@@ -189,6 +242,51 @@ ul.piano li span {
 #postcomposer .recordings .recording_two {
 
 	float: right;
+
+}
+
+#postcomposer .recordings button img {
+
+	position: relative;
+	top: 4px;
+	margin-right: 2px;
+
+}
+
+#postcomposer .delete_recording {
+
+	float: right;
+	cursor: pointer;
+
+}
+
+#postcomposer .recordings .looping {
+
+	background-color: #FBEEC9;
+
+}
+
+#postcomposer .stop_recording_play {
+
+	opacity: 0.5;
+
+}
+
+#postcomposer .recording-controls {
+
+	float: left;
+
+}
+
+#postcomposer .recordings_slider_offset {
+
+	width: 245px;
+
+}
+
+#postcomposer .misc_controls {
+
+	margin-top: 10px;
 
 }
 
