playing in threads done

--- a/styles.css
+++ b/styles.css
@@ -290,6 +290,18 @@ ul.piano li span {
 
 }
 
+.postcomposer-player {
+
+	text-align: center;
+
+}
+
+.postcomposer-player img {
+
+	cursor: pointer;
+
+}
+
 /* jQuery UI CSS */
 
 .ui-slider {
